I was missing some commas....

--- a/example.config
+++ b/example.config
@@ -3,11 +3,11 @@
     "user": "username",     // the GitHub username of the user who owns the repo
     "repo": "reponame",     // the name of the repo
     "oauthtoken": "TOKEN",  // your OAuth token for this application
-    "path": "path/to/repo"  // the path to the repo we're watching
+    "path": "path/to/repo",  // the path to the repo we're watching
     "branches": [           // list of branches to watch
         "master", 
         "development",      // trailing commas in lists are also ignored
-    ] 
+    ],
     "emails": [             // list of emails to alert 
         "jane@example.org",
         "bob@example.org",
