--- a/example.config
+++ b/example.config
@@ -11,6 +11,16 @@
     "emails": [             // list of emails to alert 
         "jane@example.org",
         "bob@example.org",
-    ]
+    ],
+    "cmds": [               // list of commands to execute in the repo
+        {                   // specify the name and a list of arguments
+            "name": "make", 
+            "args": ["clean"]
+        },
+        {
+            "name": "make",
+            "args": ["-j", "4"]
+        }
+    ],
 }
 
