Updated the example config.

--- a/example.config
+++ b/example.config
@@ -2,16 +2,21 @@
     // You can insert line comments like this! They'll be removed
     "user": "username",     // the GitHub username of the user who owns the repo
     "repo": "reponame",     // the name of the repo
-    "oauthtoken": "TOKEN",  // your OAuth token for this application
-    "path": "path/to/repo",  // the path to the repo we're watching
+    "oauthtoken": "token",  // your OAuth token for this application
+    "path": "/path/to/repo",  // the path to the repo we're watching
     "branches": [           // list of branches to watch
-        "master", 
-        "development",      // trailing commas in lists are also ignored
+        "master", "development" 
     ],
-    "emails": [             // list of emails to alert 
-        "jane@example.org",
-        "bob@example.org",
-    ],
+    "email": {             
+        "sender": "Buildy Builder <postmaster@yourmailgundomain>",
+        "recipients": [      // list of emails to alert 
+            "jane@example.com",
+            "bob@example.com",
+        ],
+        "subject_prefix": "[Buildy Builder]",
+        "mailgun_domain": "yourmailgundomain",
+        "mailgun_key": "key-somehashvalue",
+    },
     "cmds": [               // list of commands to execute in the repo
         {                   // specify the name and a list of arguments
             "name": "make", 
@@ -19,8 +24,13 @@
         },
         {
             "name": "make",
-            "args": ["-j", "4"]
-        }
+            "args": []
+        },
+        {
+            "name": "bin/test",
+            "args": []
+        },
     ],
+    "postcmd": "process" // this program is for processing the build output
 }
 
